--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ padding: 0 15PX;
 }
 .image-1{
     background: url(../Rectangle\ 22.png);
-    width: 100%;
+    width: 1440px;
     height: 586px;
     position: relative;
    margin-top: 100px;
